registry/kubefirst-inc/metaphor/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: metaphor
  name: metaphor
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 443
    protocol: TCP
    targetPort: 3000
  selector:
    run: metaphor
  type: NodePort
