registry/kubefirst-inc/metaphor/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: metaphor
  labels:
    run: metaphor
spec:
  rules:
    - host: metaphor-preprod.kube1st.com
      http:
        paths:
          - backend:
              serviceName: metaphor
              servicePort: 8080
            path: /
  tls:
    - secretName: metaphor-tls
      hosts:
        - metaphor-preprod.kube1st.com
